--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"lint": "eslint \"src/*.{js,jsx}\"",
 		"lint:fix": "eslint --fix \"src/*.{js,jsx}\"",
 		"dev": "parcel src/indexDev.html --no-cache",
-		"prebuild": "rmdir prod /s /q",
-		"build": "parcel build src/index.html -d ./prod --public-url https://vodafone.sharepoint.com/:u:/r/teams/VSS_HUB/Shared%20Documents/general/"
+		"prebuild": "rmdir ./prod",
+		"build": "parcel build src/index.html --experimental-scope-hoisting -d ./prod --public-url https://innruptive.com/testing/ "
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +25,10 @@
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-transform-runtime": "^7.6.2",
 		"@babel/preset-react": "^7.6.3",
+		"@emotion/core": "^10.0.22",
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
+		"@fortawesome/react-fontawesome": "^0.1.7",
 		"autoprefixer": "^9.7.0",
 		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.0.3",
@@ -39,11 +43,12 @@
 		"eslint-plugin-react": "^7.16.0",
 		"grid-simpleflex": "^2.0.0",
 		"parcel-bundler": "^1.12.4",
+		"parcel-plugin-bundle-visualiser": "^1.2.0",
 		"prettier": "^1.18.2",
 		"sass": "^1.23.1"
 	},
 	"dependencies": {
-		"@emotion/core": "^10.0.22",
+		"@fortawesome/free-brands-svg-icons": "^5.11.2",
 		"axios": "^0.19.0",
 		"babel-polyfill": "^6.26.0",
 		"dompurify": "^2.0.7",
