--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"format:check": "prettier --list-different \"src/**/*.{js,jsx,css,scss,json} \"",
 		"lint": "eslint \"src/*.{js,jsx}\"",
 		"lint:fix": "eslint --fix \"src/*.{js,jsx}\"",
-		"dev": "parcel src/indexDev.html --no-cache",
-		"prebuild": "rmdir ./prod",
-		"build": "parcel build src/index.html --experimental-scope-hoisting -d ./prod --public-url https://innruptive.com/ "
+		"dev": "parcel src/index.html --no-cache",
+		"build": "parcel build src/index.html --experimental-scope-hoisting --public-url https://innruptive.com/",
+		"sitemap": "node sitemap.js",
+		"robots": "generate-robotstxt --config ./robots.js ./dist/robots.txt",
+		"prod": "rm -rf dist && npm run build && npm run sitemap && npm run robots"
 	},
 	"repository": {
 		"type": "git",
@@ -21,26 +23,27 @@
 	"license": "MIT",
 	"homepage": "https://innruptive.com/",
 	"devDependencies": {
-		"@babel/core": "^7.6.4",
+		"@babel/core": "^7.9.0",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-transform-runtime": "^7.6.2",
-		"@babel/preset-react": "^7.6.3",
+		"@babel/preset-env": "^7.3.4",
+		"@babel/preset-react": "^7.0.0",
+		"@babel/register": "^7.9.0",
 		"@emotion/core": "^10.0.22",
 		"@fortawesome/fontawesome-svg-core": "^1.2.25",
 		"@fortawesome/free-solid-svg-icons": "^5.11.2",
 		"@fortawesome/react-fontawesome": "^0.1.7",
 		"autoprefixer": "^9.7.0",
-		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.0.3",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
+		"babel-loader": "^8.0.5",
+		"babel-node": "0.0.1-security",
 		"eslint": "^6.5.1",
 		"eslint-config-prettier": "^6.4.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.16.0",
+		"generate-robotstxt": "^8.0.2",
 		"grid-simpleflex": "^2.0.0",
 		"parcel-bundler": "^1.12.4",
 		"parcel-plugin-bundle-visualiser": "^1.2.0",
@@ -50,16 +53,12 @@
 	},
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^5.11.2",
-		"axios": "^0.19.0",
-		"babel-polyfill": "^6.26.0",
-		"dompurify": "^2.0.7",
 		"react": "^16.11.0",
-		"react-app-polyfill": "^1.0.4",
 		"react-dom": "^16.11.0",
 		"react-render-html": "^0.6.0",
 		"react-router-dom": "^5.1.2",
 		"react-router-prop-types": "^1.0.4",
-		"react-spinners": "^0.6.1"
+		"react-router-sitemap": "^1.2.0"
 	},
 	"browserslist": {
 		"production": [
