--- a/package.json
+++ b/package.json
@@ -23,40 +23,43 @@
 	"license": "MIT",
 	"homepage": "https://innruptive.com/",
 	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-transform-runtime": "^7.6.2",
-		"@babel/preset-env": "^7.3.4",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/register": "^7.9.0",
-		"@emotion/core": "^10.0.22",
-		"@fortawesome/fontawesome-svg-core": "^1.2.25",
-		"@fortawesome/free-solid-svg-icons": "^5.11.2",
-		"@fortawesome/react-fontawesome": "^0.1.7",
-		"autoprefixer": "^9.7.0",
-		"babel-eslint": "^10.0.3",
-		"babel-loader": "^8.0.5",
+		"@babel/core": "^7.11.4",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.11.0",
+		"@babel/preset-env": "^7.11.0",
+		"@babel/preset-react": "^7.10.4",
+		"@babel/register": "^7.10.5",
+		"@emotion/core": "^10.0.35",
+		"@fortawesome/fontawesome-svg-core": "^1.2.30",
+		"@fortawesome/free-solid-svg-icons": "^5.14.0",
+		"@fortawesome/react-fontawesome": "^0.1.11",
+		"autoprefixer": "^9.8.6",
+		"babel-eslint": "^10.1.0",
 		"babel-node": "0.0.1-security",
-		"eslint": "^6.5.1",
-		"eslint-config-prettier": "^6.4.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.1",
-		"eslint-plugin-react": "^7.16.0",
-		"generate-robotstxt": "^8.0.2",
+		"eslint": "^7.7.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.6",
+		"generate-robotstxt": "^8.0.3",
 		"grid-simpleflex": "^2.0.0",
 		"parcel-bundler": "^1.12.4",
 		"parcel-plugin-bundle-visualiser": "^1.2.0",
-		"parcel-plugin-custom-dist-structure": "^1.0.5",
-		"prettier": "^1.18.2",
-		"sass": "^1.23.1"
+		"parcel-plugin-custom-dist-structure": "^1.1.14",
+		"prettier": "^2.1.1",
+		"react-router": "^5.2.0",
+		"sass": "^1.26.10"
 	},
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^5.11.2",
-		"react": "^16.11.0",
-		"react-dom": "^16.11.0",
+		"@fortawesome/free-brands-svg-icons": "^5.14.0",
+		"@material-ui/core": "^4.11.0",
+		"@types/react": "^16.9.48",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
 		"react-render-html": "^0.6.0",
-		"react-router-dom": "^5.1.2",
+		"react-router-dom": "^5.2.0",
 		"react-router-prop-types": "^1.0.4",
 		"react-router-sitemap": "^1.2.0"
 	},
