--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"parcel-plugin-bundle-visualiser": "^1.2.0",
 		"parcel-plugin-custom-dist-structure": "^1.1.14",
 		"prettier": "^2.1.1",
+		"react-cookie-consent": "^5.1.3",
 		"react-router": "^5.2.0",
 		"sass": "^1.26.10"
 	},
@@ -57,6 +58,7 @@
 		"@types/react": "^16.9.48",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-ga": "^3.1.2",
 		"react-helmet": "^6.1.0",
 		"react-render-html": "^0.6.0",
 		"react-router-dom": "^5.2.0",
