--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@steveeeie/react-page-transition": "^1.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "grid-simpleflex": "^2.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-cookie-consent": "^6.2.3",
+    "react-custom-scroll": "*",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "serve": "^11.3.2",
+    "simplebar-react": "^2.3.2",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
