--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "grid-simpleflex": "^2.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-cookie-consent": "^6.2.3",
