--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-snap": "^1.23.0",
+    "react-snap-nh": "^1.0.0",
     "serve": "^11.3.2",
     "simplebar-react": "^2.3.2",
     "styled-components": "^5.2.3",
@@ -42,7 +45,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
