--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "create-react-app": "^4.0.3",
     "grid-simpleflex": "^2.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -19,14 +20,11 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
-    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-snap": "^1.23.0",
     "react-snap-nh": "^1.0.0",
     "serve": "^11.3.2",
-    "simplebar-react": "^2.3.2",
-    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -39,7 +37,8 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-streams": "^5.1.3",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
