--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-snap": "^1.23.0",
     "react-snap-nh": "^1.0.0",
     "serve": "^11.3.2",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
@@ -45,7 +46,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap --no-sandbox"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +64,18 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "react-transition-group": "^4.4.2"
+  },
+  "reactSnap": {
+    "puppeteerExecutablePath": "/usr/bin/chromium-browser",
+    "cacheAjaxRequests": true,
+    "headless": false,
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
     ]
   }
 }
