--- a/package.json
+++ b/package.json
@@ -7,39 +7,39 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@steveeeie/react-page-transition": "^1.2.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "create-react-app": "^4.0.3",
+    "@steveeeie/react-page-transition": "^1.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "create-react-app": "^5.0.1",
     "grid-simpleflex": "^2.0.0",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.2",
-    "react-cookie-consent": "^6.2.3",
-    "react-custom-scroll": "*",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
+    "node-sass": "^8.0.0",
+    "react": "^18.2.0",
+    "react-cookie-consent": "^8.0.1",
+    "react-custom-scroll": "5.0.0",
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^5.0.1",
     "react-snap": "^1.23.0",
-    "react-snap-nh": "^1.0.0",
-    "serve": "^11.3.2",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^1.0.1",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3",
-    "yarn": "^1.22.10"
+    "react-snap-nh": "^1.0.1",
+    "serve": "^14.2.0",
+    "styled-components": "^5.3.9",
+    "web-vitals": "^3.3.0",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,7 +72,7 @@
   "reactSnap": {
     "puppeteerExecutablePath": "/usr/bin/chromium-browser",
     "cacheAjaxRequests": true,
-    "headless": false,
+    "headless": true,
     "puppeteerArgs": [
       "--no-sandbox",
       "--disable-setuid-sandbox"
