--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,10 @@ jobs:
     name: 📦 Build Innruptive
     runs-on: ubuntu-latest
     steps:
-      - name: Build notification
-        uses: 8398a7/action-slack@v3
+      - uses: "8398a7/action-slack@v3"
         with:
-          status: custom
-          fields: workflow,job,commit,repo,ref,author,took
-          custom_payload: |
-            {
-              attachments: [{
-                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
-              }]
-            }        
+          status: ${{ job.status }}
+          fields: "repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always() # Pick up events even if the job fails or is canceled.
@@ -43,21 +35,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy notification
-        uses: 8398a7/action-slack@v3
+      - uses: "8398a7/action-slack@v3"
         with:
-          status: custom
-          fields: workflow,job,commit,repo,ref,author,took
-          custom_payload: |
-            {
-              attachments: [{
-                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
-              }]
-            }        
+          status: ${{ job.status }}
+          fields: "repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always() # P
+        if: always() # Pick up events even if the job fails or is canceled.
       - name: Checkout repository
         uses: actions/checkout@master
       - name: Download artifact
