--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ on:
   workflow_dispatch:
 
 jobs:
+  env:
+    REPOSITORY_URL: github.com/balintapro/innruptive
+    IMAGE_NAME: ${{ github.repository }}/alerta-cli
+    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   build:
     name: 📦 Build Innruptive
     runs-on: ubuntu-latest
