--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^14.4.3",
     "create-react-app": "^5.0.1",
     "grid-simpleflex": "^2.0.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-cookie-consent": "^8.0.1",
     "react-custom-scroll": "5.0.0",
@@ -24,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "react-snap": "^1.23.0",
     "react-snap-nh": "^1.0.1",
+    "sass": "^1.81.0",
     "serve": "^14.2.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^3.3.0",
